--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "abdulrahman/multilang-slug",
+    "name": "alzoubi/multilang-slug",
     "description": "A package to generate multilingual slugs easily for Laravel models",
         "keywords": ["laravel", "slug", "multilingual", "slugify"],
 
